--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,33 @@ markdown: kramdown
 theme: minima
 
 
-plugins_dir:
+plugins:
   - jekyll-feed
+  - jekyll-paginate-v2
   
+# Collections
+collections:
+  round1:
+    output: true
+    longname: "Round 1"
+    description: "Posts from my first trip through 100 Days of Code, started 03 JUL 2017"
+  round2:
+    output: true
+    longname: "Round 2"
+    description: "Posts from my second trip through 100 Days of Code, started 12 OCT 2017"
+    #permalink: /:collection/:path/
+    
+# Plugin: Pagination (jekyll-paginate-v2)
+pagination:
+  #collection   :  'round1'
+  enabled      : true
+  debug        : false
+  per_page     : 10
+  permalink    : "/page/:num"
+  #title        : ":title - Page :num of :max"
+  limit        : 0
+  sort_field   : "date"
+  sort_reverse : true
 
 
 # Exclude from processing.
