--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 .sass-cache
 .jekyll-metadata
+_config.yml_includes_layouts_posts_round1_round2.git.gitignore.sass-cache404.htmlassetscodechallenges.markdownGemfileGemfile.lockimagesindex.mdlistothings.markdownround1.mdround2.md
